# math4py

./: AGENTS.md  README.md  examples.sh  pyproject.toml  run.sh  test.sh
_doc/: measure.md  plan.md  rplot.md  todo.md
examples/geometry/: basic_vectors.py  line_operations.py  plane_distance.py
examples/gpt/: microgpt.py
examples/logic/: family.kb  family.pl  math.kb  math.pl  prolog.py  prolog_engine.py  prolog_simple.py  rete_examples.py  rete_main.py
examples/statistics/: anova_example.py  basic_stats.py  chisq_test_example.py  clt.py  plot_ci_example.py  t_test_example.py  z_test_example.py
src/math4py/: __init__.py
tests/: test_number_theory.md  test_number_theory.py
tests/algebra/: test_complex.md  test_complex.py  test_complex_function.md  test_complex_function.py  test_function.md  test_function.py  test_galois_theory.md  test_galois_theory.py  test_matrix.py  test_structures.md  test_structures.py  test_theorems.md  test_theorems.py
tests/calculus/: test_calculus_advanced.md  test_calculus_advanced.py  test_electromagnetism.py  test_function.md  test_function.py  test_measure.md  test_measure.py  test_numerical.py  test_theorem.md  test_theorem.py  test_vector_calculus.md  test_vector_calculus.py
tests/category_theory/: test_category_function.md  test_category_function.py  test_category_theorem.md  test_category_theorem.py
tests/differential_equation/: test_differential_functions.md  test_differential_functions.py  test_theorem.md  test_theorem.py
tests/differential_geometry/: test_diff_geo_function.md  test_diff_geo_function.py  (+6 more)
(+359 files in other folders)
