[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math4py"
version = "0.1.0"
description = "A Python library for mathematics - algebra, calculus, geometry and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/你的用戶名/math4py"
Repository = "https://github.com/你的用戶名/math4py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["math4py*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py38"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle errors/warnings + isort
ignore = ["E501"]  # line-too-long handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
